Fixed copy to clipboard on mobile, layout

--- a/tt2-utils/tt2-utils-gui/src/design/_layout.scss
+++ b/tt2-utils/tt2-utils-gui/src/design/_layout.scss
@@ -2,6 +2,9 @@
     height: calc( 100vh - 3.25rem);
     padding-top: 2rem;
     padding-bottom: 2rem;
+    @media screen and (max-width: 1023px) {
+        padding: 1.5rem;
+    }
 }
 
 .page-flex-container {
